--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.1.0",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
@@ -23,6 +24,7 @@
     "angular-calendar": "^0.31.0",
     "angular-calendar-scheduler": "^16.0.0",
     "date-fns": "^2.30.0",
+    "firebase": "^10.5.0",
     "fullcalendar": "^6.1.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
