--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@ng-select/ng-select": "^11.2.0",
     "angular-calendar": "^0.31.0",
     "angular-calendar-scheduler": "^16.0.0",
+    "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.5.0",
     "fullcalendar": "^6.1.8",
     "moment": "^2.29.4",
+    "ng2-charts": "^5.0.3",
     "papaparse": "^5.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
